--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
     datasource:
-      #url: jdbc:mysql://101.200.47.113:3306/ishare?characterEncoding=UTF-8
-      url: jdbc:mysql://10.115.0.29:3306/ishare?useUnicode=true&characterEncoding=utf8
+      url: jdbc:mysql://101.200.47.113:3306/ishare?useUnicode=true&characterEncoding=utf8
+      #url: jdbc:mysql://10.115.0.29:3306/ishare?useUnicode=true&characterEncoding=utf8
       username: df
       password: 123456
       #schema: database/import.sql
